--- a/Dockerfile.sender
+++ b/Dockerfile.sender
@@ -8,7 +8,9 @@ COPY go.sum ./
 RUN go mod download
 
 # Затем копируем весь проект
+COPY test.pdf /app/test.pdf
 COPY . .
+
 
 # Собираем бинарник
 RUN go build -o /app/sender ./cmd/sender-service/main.go
